@@ -564,6 +564,20 @@
   publisher	= {Springer-Verlag}
 }
 
+@InProceedings{	  piterman.06.vmcai,
+  author	= {Nir Piterman and Amir Pnueli and Yaniv Sa'ar},
+  editor	= {E. Allen Emerson and Kedar S. Namjoshi"},
+  title		= {Synthesis of Reactive(1) Designs},
+  booktitle	= {Proceedings of the 7th International Conference on
+		  Verification, Model Checking, and Abstract Interpretation
+		  (VMCAI'06)},
+  year		= {2006},
+  publisher	= {Springer},
+  pages		= {364--380},
+  volume	= {3855},
+  series	= {Lecture Notes in Computer Science}
+}
+
 @Book{		  psl.04.lrm,
   title		= {Property Specification Language Reference Manual v1.1},
   publisher	= {Accellera},
@@ -671,11 +685,11 @@
 
 @Book{		  systemverilog.18.std,
   title		= {1800-2017 - IEEE Standard for SystemVerilog--Unified
-                   Hardware Design, Specification, and Verification Language},
+		  Hardware Design, Specification, and Verification Language},
   publisher	= {IEEE},
   year		= {2018},
   month		= feb,
-  doi           = {10.1109/IEEESTD.2018.8299595}
+  doi		= {10.1109/IEEESTD.2018.8299595}
 }
 
 @InProceedings{	  tabakov.10.rv,
