@@ -129,7 +129,7 @@ EOF
 diff output expected
 
 genltl --kr-n2=1..2 --kr-nlogn=1..2 --kr-n=1..2 --gxf-and=0..3 --fxg-or=0..3 \
-       --format=%F=%L,%f |
+       --pps-arbiter-standard=2..3 --pps-arbiter-strict=2..3 --format=%F=%L,%f |
     ltl2tgba --low --det -F-/2 --stats='%<,%s' > out
 cat >exp<<EOF
 kv-psi=1,15
@@ -146,6 +146,10 @@ fxg-or=0,2
 fxg-or=1,3
 fxg-or=2,4
 fxg-or=3,5
+pps-arbiter-standard=2,15
+pps-arbiter-standard=3,23
+pps-arbiter-strict=2,37
+pps-arbiter-strict=3,82
 EOF
 diff out exp
 
